--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "tailwindcss": "^3.4.7"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.6.0"
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "dotenv": "^16.4.5"
   }
 }
