--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "dotenv": "^16.4.5"
+  },
+  "scripts": {
+    "start": "node js"
   }
 }
